# A-Mobile-Robot-for-Mapping-and-Exploration

./: Map_Peeross.pgm  Map_Peeross.yaml  README.md  frames_2025-12-18_02.43.45.gv  frames_2025-12-19_22.25.46.gv  frames_2025-12-20_00.54.15.gv  frames_2025-12-20_00.58.59.gv  frames_2025-12-25_20.48.18.gv  frames_2025-12-25_20.54.24.gv  frames_2025-12-25_21.22.32.gv  frames_2025-12-25_21.26.57.gv  frames_2025-12-26_00.45.20.gv  frames_2025-12-26_01.52.44.gv  frames_2025-12-26_02.14.34.gv  frames_2026-01-23_20.06.02.gv  frames_2026-01-25_23.40.14.gv  frames_2026-03-01_19.00.54.gv  frames_2026-03-02_01.36.49.gv  frames_2026-03-07_18.56.29.gv  gui.py  map_1765997747.yaml  map_1766131681.pgm  map_1766131681.yaml  map_1766131684.yaml  map_1766671963.pgm  map_1766671963.yaml  map_2.pgm  mappeeross.data  mappeeross.pgm  mappeeross.yaml
install/: setup.bash  setup.ps1  setup.sh  setup.zsh
install/diffdrive_arduino/lib/diffdrive_arduino/: cmd_vel_to_motor  cmd_vel_to_odom
install/diffdrive_arduino/share/diffdrive_arduino/: package.dsv  package.ps1  package.sh  package.xml
install/motor_cmd_bridge/lib/motor_cmd_bridge/: cmd_vel_to_motor
install/motor_cmd_bridge/share/motor_cmd_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/motor_serial_bridge/lib/motor_serial_bridge/: motor_serial_bridge
install/my_bot/lib/my_bot/: encoder_odom  (+3 more)
log/: latest_build
src/diffdrive_arduino/: package.xml  setup.py
src/diffdrive_arduino/diffdrive_arduino/: cmd_vel_to_motor.py  cmd_vel_to_motor.py.bak  cmd_vel_to_odom.py
src/motor_cmd_bridge/: package.xml  setup.cfg  setup.py
src/motor_cmd_bridge/motor_cmd_bridge/: cmd_vel_to_motor.py
src/motor_serial_bridge/: package.xml  setup.py
src/motor_serial_bridge/motor_serial_bridge/: motor_serial_bridge_node.py
src/my_bot/: CMakeLists.txt  package.xml  setup.py
src/my_bot/config/: slam.yaml  slam_params.yaml  teleop_joy.yaml
src/my_bot/launch/: bringup.launch.py  bringup_real_slam.launch.py  bringup_real_slam.launch.py.bak
src/my_bot/my_bot/: cmd_vel_to_motor.py.bak  cmdvel_to_odom.py  diff_drive_odom.py  encoder_odom.py  encoder_odom.py.save  joy_button_teleop.py  odom_publisher.py  odom_tf_broadcaster.py  robot_driver.py
src/my_bot/src/: encoder_odom.cpp
src/my_bot_py/: package.xml  setup.cfg  setup.py
src/my_bot_py/my_bot_py/: cmd_vel_to_motor.py  cmd_vel_to_serial.py
src/serial_motor_demo/: CMakeLists.txt
src/serial_motor_demo/serial_motor_demo/: driver.py
src/serial_motor_demo_msgs/: CMakeLists.txt
src/slam_all/: package.xml  setup.cfg  setup.py
src/slam_all/config/: slam_async.yaml
src/slam_all/launch/: all.launch.py
src/slam_all/slam_all/: fake_odom.py
(+100 files in other folders)
