<?xml version="1.0"?>
<package format="3">
  <name>diffdrive_arduino</name>
  <version>0.0.0</version>
  <description>Diff drive Arduino interface using custom motor messages</description>

  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>Apache-2.0</license>

  <!-- build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>serial_motor_demo_msgs</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>


  <!-- optional but recommended -->
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
